network-policy/service-a.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-a
  labels:
    app: service-a
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: service-a
  name: service-a
  namespace: service-a
spec:
  volumes:
  - name: html
    configMap:
      name: service-a
  - name: config
    configMap:
      name: service-a-nginx.conf
  containers:
  - image: nginx
    name: nginx-pod
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html/
    - name: config
      mountPath: /etc/nginx/
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
  namespace: service-a
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
