network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-b-network-policy
  namespace: service-b
spec:
  podSelector:
    matchLabels:
      app: service-b
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: service-a
      podSelector:
        matchLabels:
          app: busybox-pod
    ports:
    - protocol: TCP
      port: 80
